syntax = "proto3";

package nomachine_status.v1;

message GetStatusRequest {}

message GetStatusResponse {
  string host_name = 1;
  bool no_machine_running = 2;
  bool client_attached = 3;
}

service GetStatusResponseService {
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);
}
